# CSE180project-

./: README.md
install/: local_setup.sh  setup.sh
install/human_detection/share/human_detection/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/human_detection/share/human_detection/cmake/: human_detectionConfig.cmake
log/: latest_build
src/human_detection/: CMakeLists.txt
src/human_detection/launch/: human_detection_launch.py
src/human_detection/src/: humanDetector.cpp
